--- a/FinalProject/users/templates/users/login.html
+++ b/FinalProject/users/templates/users/login.html
@@ -1,10 +1,44 @@
 {% extends 'base.html' %}
 
 {% block body %}
-<Form class="mt-2" method="POST">
-    {% csrf_token %}
-    {{ form }}
-    <button type="submit">Login</button>
-</Form>
+
+<form method="post" action="{% url 'login' %}">
+{% csrf_token %}
+    <section class="mt-5" style="background-color: white">
+      <div class="container py-5 h-100">
+        <div class="row d-flex justify-content-center align-items-center h-100">
+          <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+            <div class="card shadow-2-strong" style="border-radius: 1rem;">
+              <div class="card-body p-5 text-center">
+
+                <h3 class="mb-5">Sign in</h3>
+
+                <div class="form-outline mb-4">
+                  <label for="{{ form.username.id_for_label }}">Username </label>
+                  {{ form.username }}
+                </div>
+
+                <div class="form-outline mb-4">
+                  <label for="{{ form.password.id_for_label }}">Password </label>
+                  {{ form.password }}
+                </div>
+                <button class="btn btn-primary btn-lg btn-block" type="submit">Login</button>
+
+                  <div>
+                      <p class="mb-0">Don't have an account?</p>
+                      <a href="/register" class="text-grey-50 fw-bold">Register</a>
+                  </div>
+
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+</section>
+</form>
+
+
+
+
 {% endblock %}
 
