--- a/FinalProject/mysite/templates/base.html
+++ b/FinalProject/mysite/templates/base.html
@@ -19,7 +19,7 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item active">
-                <a class="nav-link" href="{% url 'mysite:Home Page'%}">Home <span class="sr-only"></span></a>
+                <a class="nav-link" href="{% url 'mysite:Home Page'%}">Buy Stocks <span class="sr-only"></span></a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'mysite:User Portfolio'%}">My Portfolio</a>
