--- a/FinalProject/mysite/templates/userportfolio.html
+++ b/FinalProject/mysite/templates/userportfolio.html
@@ -13,6 +13,7 @@
 {% block body %}
     <div class="d-flex flex-column pt-4 align-items-center">
         {% if user.is_authenticated %}
+            <h3>Your Portfolio</h3>
 
 
         {% else %}
