--- a/FinalProject/mysite/templates/addfunds.html
+++ b/FinalProject/mysite/templates/addfunds.html
@@ -14,6 +14,28 @@
     <div class="d-flex flex-column pt-4 align-items-center">
         {% if user.is_authenticated %}
 
+            <form method="post" action="{% url 'login' %}" class="w-50">
+            {% csrf_token %}
+                <section class="mt-5" style="background-color: white">
+                  <div class="container py-5 h-100">
+                    <div class="row d-flex justify-content-center align-items-center h-100">
+                      <div class="col-12 col-md-8 col-lg-6 col-xl-5">
+                        <div class="card shadow-2-strong" style="border-radius: 1rem;">
+                          <div class="card-body p-5 text-center">
+                            <h3 class="mb-5">Add Funds to Account</h3>
+                            <div class="form-outline mb-3">
+                              <label for="typeNumber">Amount to Add ($)</label>
+                            </div>
+                              <input value="0.0" type="number" id="typeNumber" class="form-control" />
+                              {{ form.as_p }}
+                            <button class="btn btn-primary btn-lg btn-block mt-3" type="submit">Add Funds</button>
+                          </div>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+            </section>
+</form>
 
         {% else %}
             <h3>To Add Funds, Please
