--- a/FinalProject/mysite/templates/userportfolio.html
+++ b/FinalProject/mysite/templates/userportfolio.html
@@ -14,6 +14,9 @@
     <div class="d-flex flex-column pt-4 align-items-center">
         {% if user.is_authenticated %}
             <h3>Your Portfolio</h3>
+            <h5>Current Liquid Funds: $</h5>
+
+
 
 
         {% else %}
