--- a/FinalProject/mysite/templates/addfunds.html
+++ b/FinalProject/mysite/templates/addfunds.html
@@ -14,7 +14,7 @@
     <div class="d-flex flex-column pt-4 align-items-center">
         {% if user.is_authenticated %}
 
-            <form method="post" action="{% url 'login' %}" class="w-50">
+            <form method="post" action="{% url 'mysite:Funds Page' %}" class="w-50">
             {% csrf_token %}
                 <section class="mt-5" style="background-color: white">
                   <div class="container py-5 h-100">
@@ -26,7 +26,6 @@
                             <div class="form-outline mb-3">
                               <label for="typeNumber">Amount to Add ($)</label>
                             </div>
-                              <input value="0.0" type="number" id="typeNumber" class="form-control" />
                               {{ form.as_p }}
                             <button class="btn btn-primary btn-lg btn-block mt-3" type="submit">Add Funds</button>
                           </div>
