--- a/FinalProject/mysite/templates/homepage.html
+++ b/FinalProject/mysite/templates/homepage.html
@@ -17,6 +17,7 @@
         {% if user.is_authenticated %}
 
             <h1>Available Stocks</h1>
+            <h5>Your Current Liquid Funds: {{ funds }}$</h5>
 
             {% for stock in stocks %}
 
